--- a/OnlineShop/appsettings.json
+++ b/OnlineShop/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "OnlineShop": "Server=.;Database=OnlineShop; Integrated Security=True;"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
